--- a/styles.css
+++ b/styles.css
@@ -1,32 +1,27 @@
-* {
+:root {
+    --audi-white: #fff;
+    --audi-black: #000;
+    --audi-red: #f50537;
+    --gray-black: #333;
+    --gray-dark: #808080;
+    --gray-light: #ccc;
+    --gray-white: #f2f2f2;
+}
+
+*,
+*::before,
+*::after {
     box-sizing: border-box;
     margin: 0;
 }
 
 body {
-    background-color: white;
-    color: black;
+    background-color: var(--audi-white);
+    color: var(--audi-black);
     font-family: sans-serif;
 }
 
-nav {
-    height: 10vh;
-    padding: 20px;
-    background-color: #eee;
-}
-
-nav ul {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    list-style-type: none;
-}
-
-nav ul li {
-    margin: 0 15px;
-}
-
-header {
+.home-header {
     background-image: url('./images/audi-volvo.jpg');
     background-size: cover;
     background-attachment: fixed;
@@ -34,23 +29,98 @@ header {
     background-repeat: no-repeat;
     height: 100vh;
     padding: 30px;
-    color: white;
+    color: var(--audi-white);
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-section {
-    margin-top: 20px;
-    padding: 30px;
-}
-
-.split-section {
+.home-nav {
+    background-color: var(--gray-white);
+    position: sticky;
+    top: 0;
+    height: 10vh;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 }
 
-#design, #safety, #advantages {
-    background-color: #eee;
+.page-links {
+    list-style-type: none;
+    display: flex;
+    align-items: center;
+}
+
+.page-links li {
+    margin-right: 20px;
+}
+
+.page-links li a {
+    text-decoration: none;
+    color: var(--audi-black);
+}
+
+.page-links li a:hover {
+    color: var(--gray-dark);
+    text-decoration: underline;
+}
+
+#models-btn {
+    margin-right: 30px;
+    background-color: var(--audi-black);
+    color: var(--audi-white);
+    border: none;
+    padding: 15px;
+    text-align: center;
+    transition-duration: 0.4s;
+}
+
+#models-btn:hover {
+    cursor: pointer;
+    background-color: var(--gray-dark);
+}
+
+.long-text {
+    margin: 20px auto;
+    padding: 30px;
+    width: 50vw;
+}
+
+.long-text p, .long-text ul, .long-text ol {
+    margin-top: 20px;
+}
+
+.long-text h3 {
+    margin-top: 20px;
+}
+
+#history ul li {
+    margin-top: 5px;
+}
+
+.split-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.card {
+    width: 300px;
+    height: 250px;
+    margin-top: 20px;
+    background-color: var(--gray-white);
+    border: 2px solid var(--gray-black);
+    border-radius: 5px;
+    box-shadow: 5px 3px 3px var(--gray-dark);
+    padding: 20px;
+}
+
+footer {
+    height: 10vh;
+    background-color: var(--audi-black);
+    color: var(--audi-white);
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
