--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,7 @@ body {
 
 .split-content {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
 }
 
